--- a/css/desktop-styling.css
+++ b/css/desktop-styling.css
@@ -60,6 +60,9 @@ body {
       align-items: center;
       font-style: bold;
     }
+    .project-description.mobile2{
+        display: none;
+    }
   
     .desktop-nav-elements li a {
       text-decoration: none;
@@ -585,8 +588,11 @@ body {
       display: flex;
       background-color: #6070ff;
       border-top-left-radius: 100px;
+      position: relative;
     }
-  
+    .backgound-image.mobile{
+        display: none;
+    }
     .backgound-image.desktop {
       background-image: url(../images/desktop-bg.svg);
       background-repeat: no-repeat;
@@ -594,8 +600,8 @@ body {
       margin-top: 2%;
       height: 100%;
       width: 1290.66px;
+      position: absolute;
     }
-  
     .contact-title {
       height: 100;
       align-items: center;
@@ -667,7 +673,8 @@ body {
     .project-description.mobile {
       display: none;
     }
-  
+   
+    
     input[type=text],
     input[type=email],
     select,
