--- a/css/desktop-styling.css
+++ b/css/desktop-styling.css
@@ -182,22 +182,21 @@ body {
     background: rgb(255, 255, 255);
     height: 100%;
     margin-top: 9%;
-}
-  .left-card1-block.one{
-    margin-left: -10%;
-    
-}
-.left-card1-block.two{
-    margin-top: 10%;
-    
-    
-}
-.left-card1-block.three{
-    margin-left: -16%;
-    
-}
+  }
 
-  .project-description.four{
+  .left-card1-block.one {
+    margin-left: -10%;
+  }
+
+  .left-card1-block.two {
+    margin-top: 10%;
+  }
+
+  .left-card1-block.three {
+    margin-left: -16%;
+  }
+
+  .project-description.four {
     width: 500px;
   }
 
@@ -281,13 +280,11 @@ body {
     margin-left: 20px;
     flex-grow: 0;
     margin-top: 30px;
-   
   }
-  .project-description.desktop.three{
+
+  .project-description.desktop.three {
     width: 400px;
-
-
-  } 
+  }
 
   .language-categories {
     list-style: none;
@@ -318,9 +315,8 @@ body {
   .desktop-image1 {
     width: 540px;
     height: 448px;
-    margin-left: -20px;
+    margin-left: 5px;
     border-radius: 8px;
-    margin: 5px;
     object-fit: cover;
     padding: 10px;
   }
@@ -506,7 +502,7 @@ body {
   .desktop-image4 {
     margin-top: 5%;
     margin-left: -12%;
-    width: 100%
+    width: 100%;
   }
 
   .lang {
@@ -703,7 +699,6 @@ body {
     box-sizing: border-box;
     margin-top: 14px;
     margin-bottom: 16px;
-   
     border: 1px solid #cfd8dc;
     outline: none;
   }
