footer background image changes

--- a/css/desktop-styling.css
+++ b/css/desktop-styling.css
@@ -612,11 +612,11 @@ body {
   .backgound-image.desktop {
     background-image: url(../images/desktop-bg.svg);
     background-repeat: no-repeat;
-    object-fit: fill;
-    margin-top: 2%;
     height: 100%;
     width: 1290.66px;
+    width: 100%;
     position: absolute;
+    top: 100px;
   }
 
   .contact-title {
@@ -706,7 +706,7 @@ body {
   .text-area {
     height: 150px;
     color: #b3bac5;
-    width: 300px;
+    width: 320px;
   }
 
   .label::placeholder {
