--- a/css/desktop-styling.css
+++ b/css/desktop-styling.css
@@ -167,7 +167,7 @@ body {
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-    color: #7f8cff;
+    color: #6070FF;
   }
 
   .media-icons {
@@ -190,7 +190,7 @@ body {
     transform: scale(2);
 
   }
-
+  
   .container {
     margin-left: 3%;
     margin-top: 10%;
@@ -349,8 +349,8 @@ body {
     border-radius: 8px;
     flex: none;
     flex-grow: 0;
-    color: #6070ff;
-    background-color: #ebebff;
+    color: #4a5cff;
+    background-color: #f6f5f4;
   }
 
   .image {
