--- a/css/mobile.css
+++ b/css/mobile.css
@@ -380,7 +380,7 @@
     text-align: center;
     font-weight: 500;
     font-size: 12px;
-    color: #6070ff;
+    color: #5e6fff;
     letter-spacing: 0.03em;
     line-height: 30px;
     margin-top: -2px;
