--- a/css/mobile.css
+++ b/css/mobile.css
@@ -324,7 +324,7 @@
   }
 
   .text-2 {
-    color: #6B778C;
+    color: #6b778c;
     height: 16px;
     font-family: 'Poppins', sans-serif;
     font-style: bold;
@@ -334,7 +334,7 @@
   }
 
   .text-3 {
-    color: #6B778C;
+    color: #6b778c;
     flex: 2;
     height: 16px;
     font-family: 'Poppins', sans-serif;
