fixed interaction accessibility

--- a/css/desktop-styling.css
+++ b/css/desktop-styling.css
@@ -160,7 +160,9 @@ body {
   .social {
     padding: 15px 0;
   }
-
+  .social a{
+    text-decoration: none;
+  }
   .connection {
     font-family: 'Poppins', sans-serif;
     font-style: normal;
@@ -186,6 +188,7 @@ body {
 
   .media-icons a {
     text-decoration: none;
+    color: #505f79;
   }
 
   .media-icons li:hover {
@@ -533,6 +536,9 @@ body {
     align-self: flex-start;
     margin-bottom: 5%;
   }
+  .social-about a{
+    text-decoration: none;
+  }
 
   .connection-about {
     font-family: 'Poppins', sans-serif;
@@ -542,7 +548,7 @@ body {
     line-height: 24px;
     color: #7f8cff;
   }
-
+ 
   .media-icons-about {
     display: flex;
     list-style: none;
@@ -554,6 +560,11 @@ body {
     bottom: 87.08%;
     color: #505f79;
     transition: tranform 0.1s;
+
+  }
+  .media-icons-about a{
+    text-decoration: none;
+    color: #505f79;
   }
 
   .media-icons-about li:hover {
