--- a/css/desktop-styling.css
+++ b/css/desktop-styling.css
@@ -772,7 +772,9 @@ body {
     padding: 0 20px;
     align-items: center;
   }
-
+  .nav-items{
+  display: none;
+}
   .text-3.year {
     display: none;
   }
@@ -782,6 +784,9 @@ body {
   }
 
   .project-description.mobile {
+    display: none;
+  }
+  .nav-sub{
     display: none;
   }
 
