--- a/css/mobile.css
+++ b/css/mobile.css
@@ -56,9 +56,6 @@
     display: none;
   }
 
-  /* .language-categories > li:nth-child(2) {
-        display: none;
-      } */
   .rubby {
     display: none;
   }
@@ -134,58 +131,71 @@
     padding: 10px;
     cursor: pointer;
   }
-  .nav-sub{
-    position:absolute;
-    top:10vh;
-    right:0px;
+
+  .nav-sub {
+    position: absolute;
+    top: 10vh;
+    right: 0;
     width: 450px;
     height: 40%;
     align-items: center;
-    flex-direction:column;
+    flex-direction: column;
     background-color: rgb(231, 228, 228);
-    border-radius:0px 0px 0px 20px;
-    transition:transform 0.3s ease-in;
-    transform:translate(100%);
-    }
-    .nav-sub li{
-      color: #091e42;
-      gap: 1px;
-    }
-    .nav-change{
-    transform:translate(0%);
-    }
-    .hamburgur{
-    display:block;
-    }
-    .change .bar1 {
-    transform: rotate(45deg) translate(8px,3px);
-    }
-    .change .bar2 {
+    border-radius: 0 0 0 20px;
+    transition: transform 0.3s ease-in;
+    transform: translate(100%);
+  }
+
+  .nav-sub li {
+    color: #091e42;
+    gap: 1px;
+  }
+
+  .nav-change {
+    transform: translate(0%);
+  }
+
+  .hamburgur {
+    display: block;
+  }
+
+  .change .bar1 {
+    transform: rotate(45deg) translate(8px, 3px);
+  }
+
+  .change .bar2 {
     opacity: 0;
-    }
-    .change .bar3 {
-    transform: rotate(-45deg) translate(8px,-3px);
-    }
-  .nav-sub{
-    display:flex;
-    justify-content:space-between;
-    }
-    .list-item {
-    padding:10px;
-    list-style:none;
-    }
-    .nav-link{
-    color:inherit;
-    text-decoration:none;
-    }
-    .bar1,.bar2,.bar3 {
-    display:block;
+  }
+
+  .change .bar3 {
+    transform: rotate(-45deg) translate(8px, -3px);
+  }
+
+  .nav-sub {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .list-item {
+    padding: 10px;
+    list-style: none;
+  }
+
+  .nav-link {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  .bar1,
+  .bar2,
+  .bar3 {
+    display: block;
     width: 30px;
     height: 3px;
-    margin: 4px;
+    margin: 5px auto;
     background: #6070ff;
     display: flex;
-    -webkit-transition:all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
   }
 
   section {
