--- a/css/mobile.css
+++ b/css/mobile.css
@@ -124,12 +124,12 @@
     font-weight: 500;
     padding: 10px;
     align-items: center;
-    font-style: bold;
   }
 
   .hamburgur {
     padding: 10px;
     cursor: pointer;
+    display: block;
   }
 
   .nav-sub {
@@ -139,10 +139,12 @@
     width: 450px;
     height: 40%;
     align-items: center;
+    display: flex;
+    justify-content: space-between;
     flex-direction: column;
     background-color: rgb(231, 228, 228);
     border-radius: 0 0 0 20px;
-    transition: transform 0.3s ease-in;
+    transition: transform 0.3s ease-in-out;
     transform: translate(100%);
   }
 
@@ -155,8 +157,15 @@
     transform: translate(0%);
   }
 
-  .hamburgur {
+  .bar1,
+  .bar2,
+  .bar3 {
     display: block;
+    width: 30px;
+    height: 3px;
+    margin: 5px auto;
+    background: #6070ff;
+    -webkit-transition: all 0.3s ease-in-out;
   }
 
   .change .bar1 {
@@ -171,11 +180,6 @@
     transform: rotate(-45deg) translate(8px, -3px);
   }
 
-  .nav-sub {
-    display: flex;
-    justify-content: space-between;
-  }
-
   .list-item {
     padding: 10px;
     list-style: none;
@@ -184,18 +188,6 @@
   .nav-link {
     color: inherit;
     text-decoration: none;
-  }
-
-  .bar1,
-  .bar2,
-  .bar3 {
-    display: block;
-    width: 30px;
-    height: 3px;
-    margin: 5px auto;
-    background: #6070ff;
-    display: flex;
-    -webkit-transition: all 0.3s ease-in-out;
   }
 
   section {
@@ -313,10 +305,6 @@
     background: #fff;
     border: 1px solid #dfe1e6;
     border-radius: 16px;
-
-    /* flex: none;
-    order: 0;
-    flex-grow: 0; */
     margin: 10px;
     max-width: 327px;
   }
@@ -358,7 +346,6 @@
   .project-badges .text-1 {
     height: 16px;
     font-family: 'Poppins', sans-serif;
-    font-style: bold;
     font-weight: 600;
     font-size: 13px;
     text-transform: uppercase;
@@ -376,7 +363,6 @@
     color: #6b778c;
     height: 16px;
     font-family: 'Poppins', sans-serif;
-    font-style: bold;
     font-weight: 600;
     font-size: 13px;
     line-height: 16px;
@@ -387,7 +373,6 @@
     flex: 2;
     height: 16px;
     font-family: 'Poppins', sans-serif;
-    font-style: bold;
     font-weight: 600;
     font-size: 16px;
     line-height: 16px;
@@ -547,7 +532,6 @@
     font-weight: 500;
     padding: 10px;
     align-items: center;
-    font-style: bold;
   }
 
   .social-about {
@@ -617,7 +601,6 @@
   }
 
   .display-skills {
-    border: 1px solid black;
     list-style: none;
   }
 
@@ -642,7 +625,6 @@
     left: 41.67%;
     right: 33.33%;
     top: 25%;
-    bottom: 2;
   }
 
   .left-arrow2 {
@@ -651,7 +633,6 @@
     left: 41.67%;
     right: 33.33%;
     top: 25%;
-    bottom: 2;
   }
 
   .seperator-btn {
@@ -659,7 +640,6 @@
     height: 1px;
     left: 0;
     right: 0;
-    bottom: 0;
     background: #dfe1e6;
   }
 
