--- a/css/mobile.css
+++ b/css/mobile.css
@@ -124,77 +124,109 @@
     font-weight: 500;
     padding: 10px;
     align-items: center;
+    font-style: bold;
   }
+  /* .nav-sub{
+    display:none;
+  } */
+    .hamburgur {
+      padding: 10px;
+      cursor: pointer;
+      display: block;
+      margin-top: -40px;
+      margin-left: 100%;
+      background-color: rgb(248, 242, 242);
+    }
+    .bar1, .bar2, .bar3 {
+      display: block;
+      width: 30px;
+      height: 3px;
+      margin: 5px auto;
+      background: hsl(242deg 88% 45%);
+      -webkit-transition: all 0.3s ease-in-out;
+  }
+   
+    .nav-sub {
+      position: fixed;
+      margin-top:-20px;
+      display: flex;
+      overflow-x: hidden;
+      flex-direction: start;
+      top: 1vh;
+      right: 0;
+      width: 450px;
+      height: 100%;
+      align-items: center;
+      flex-direction: column;
+      background-color:#6070FF;
+      mix-blend-mode: multiply;;
+      border-radius: 0 0 0 20px;
+      transition: transform 0.3s ease-in-out;
+      transform: translate(100%);
 
-  .hamburgur {
-    padding: 10px;
-    cursor: pointer;
-    display: block;
-  }
+    }
+    
+    .nav-sub li {
+      height: 24px;
+      left: 0px;
+      right: 98px;
+      font-family: 'Poppins',sans-serif;
+      font-weight: 600;
+      font-size: 32px;
+      line-height: 44px;
+      display: flex;
+      flex-direction: start;
+      margin-left: -60%;
+      margin-top: 10%;
+      color: #FFFFFF;
+      
 
-  .bar1,
-  .bar2,
-  .bar3 {
-    display: block;
-    width: 30px;
-    height: 3px;
-    margin: 5px auto;
-    background: #6070ff;
-    -webkit-transition: all 0.3s ease-in-out;
-  }
+    }
+  
+    .nav-change {
+      transform: translate(0%);
+    
+    }
+  
+    .change .bar1 {
+      transform: rotate(45deg) translate(8px, 3px);
+      background-color: white;
 
-  .nav-sub {
-    position: fixed;
-    display: flex;
-    overflow-x: hidden;
-    justify-content: space-between;
-    top: 10vh;
-    right: 0;
-    width: 450px;
-    height: 60%;
-    align-items: center;
-    flex-direction: column;
-    background-color: rgb(231, 228, 228);
-    border-radius: 0 0 0 20px;
-    transition: transform 0.3s ease-in-out;
-    transform: translate(100%);
-  }
+    }
+  
+    .change .bar2 {
+      opacity: 0;
+    }
+  
+    .change .bar3 {
+      transform: rotate(-45deg) translate(8px, -3px);
+      background-color: white;
+    }
 
-  .nav-sub li {
-    color: #091e42;
-    gap: 1px;
-  }
-
-  .nav-change {
-    transform: translate(0%);
-  }
-
-  .change .bar1 {
-    transform: rotate(45deg) translate(8px, 3px);
-  }
-
-  .change .bar2 {
-    opacity: 0;
-  }
-
-  .change .bar3 {
-    transform: rotate(-45deg) translate(8px, -3px);
-  }
-
-  .list-item {
-    padding: 10px;
-    list-style: none;
-  }
-
-  .nav-link {
-    color: inherit;
-    text-decoration: none;
-  }
+  
+    .list-item {
+      padding: 10px;
+      list-style: none;
+    }
+  
+    .nav-link {
+      color: inherit;
+      text-decoration: none;
+      
+    }
+    .nav-link.about{
+      margin-left:-10% ;
+    }
+    .nav-link.port{
+      margin-right: -20px;
+    }
+   
 
   section {
     display: block;
     margin: 0 auto;
     max-width: 375px;
+  
   }
 
   .background {
@@ -351,6 +383,7 @@
   .project-badges .text-1 {
     height: 16px;
     font-family: 'Poppins', sans-serif;
+    font-style: bold;
     font-weight: 600;
     font-size: 13px;
     text-transform: uppercase;
@@ -368,6 +401,7 @@
     color: #6b778c;
     height: 16px;
     font-family: 'Poppins', sans-serif;
+    font-style: bold;
     font-weight: 600;
     font-size: 13px;
     line-height: 16px;
@@ -378,6 +412,7 @@
     flex: 2;
     height: 16px;
     font-family: 'Poppins', sans-serif;
+    font-style: bold;
     font-weight: 600;
     font-size: 16px;
     line-height: 16px;
@@ -386,6 +421,7 @@
   .project-description {
     color: #344563;
     font-weight: 400;
+    font-style: normal;
     line-height: 1.6rem;
     font-size: 16px;
     padding: 10px;
@@ -536,6 +572,7 @@
     font-weight: 500;
     padding: 10px;
     align-items: center;
+    font-style: bold;
   }
 
   .social-about {
@@ -630,6 +667,7 @@
     left: 41.67%;
     right: 33.33%;
     top: 25%;
+    bottom: 2;
   }
 
   .left-arrow2 {
@@ -638,6 +676,7 @@
     left: 41.67%;
     right: 33.33%;
     top: 25%;
+    bottom: 2;
   }
 
   .seperator-btn {
@@ -645,6 +684,7 @@
     height: 1px;
     left: 0;
     right: 0;
+    bottom: 0;
     background: #dfe1e6;
   }
 
