added backdrop-filter at nav-sub

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -159,10 +159,11 @@
       align-items: center;
       flex-direction: column;
       background-color:#6070FF;
-      mix-blend-mode: multiply;;
+      mix-blend-mode: multiply;
       border-radius: 0 0 0 20px;
       transition: transform 0.3s ease-in-out;
       transform: translate(100%);
+      backdrop-filter: blur(5px);
 
     }
     
