--- a/css/mobile.css
+++ b/css/mobile.css
@@ -126,108 +126,104 @@
     align-items: center;
     font-style: bold;
   }
+
   /* .nav-sub{
     display:none;
   } */
-    .hamburgur {
-      padding: 10px;
-      cursor: pointer;
-      display: block;
-      margin-top: -40px;
-      margin-left: 100%;
-      background-color: rgb(248, 242, 242);
-    }
-    .bar1, .bar2, .bar3 {
-      display: block;
-      width: 30px;
-      height: 3px;
-      margin: 5px auto;
-      background: hsl(242deg 88% 45%);
-      -webkit-transition: all 0.3s ease-in-out;
+  .hamburgur {
+    padding: 10px;
+    cursor: pointer;
+    display: block;
+    margin-top: -40px;
+    margin-left: 100%;
+    background-color: rgb(248, 242, 242);
   }
-   
-    .nav-sub {
-      position: fixed;
-      margin-top:-20px;
-      display: flex;
-      overflow-x: hidden;
-      flex-direction: start;
-      top: 1vh;
-      right: 0;
-      width: 450px;
-      height: 100%;
-      align-items: center;
-      flex-direction: column;
-      background-color:#6070FF;
-      mix-blend-mode: multiply;
-      border-radius: 0 0 0 20px;
-      transition: transform 0.3s ease-in-out;
-      transform: translate(100%);
-      backdrop-filter: blur(5px);
 
-    }
-    
-    .nav-sub li {
-      height: 24px;
-      left: 0px;
-      right: 98px;
-      font-family: 'Poppins',sans-serif;
-      font-weight: 600;
-      font-size: 32px;
-      line-height: 44px;
-      display: flex;
-      flex-direction: start;
-      margin-left: -60%;
-      margin-top: 10%;
-      color: #FFFFFF;
-      
+  .bar1,
+  .bar2,
+  .bar3 {
+    display: block;
+    width: 30px;
+    height: 3px;
+    margin: 5px auto;
+    background: hsl(242deg 88% 45%);
+    -webkit-transition: all 0.3s ease-in-out;
+  }
 
-    }
-  
-    .nav-change {
-      transform: translate(0%);
-    
-    }
-  
-    .change .bar1 {
-      transform: rotate(45deg) translate(8px, 3px);
-      background-color: white;
+  .nav-sub {
+    position: fixed;
+    margin-top: -20px;
+    display: flex;
+    overflow-x: hidden;
+    flex-direction: start;
+    top: 1vh;
+    right: 0;
+    width: 450px;
+    height: 100%;
+    align-items: center;
+    flex-direction: column;
+    background-color: #6070ff;
+    mix-blend-mode: multiply;
+    border-radius: 0 0 0 20px;
+    transition: transform 0.3s ease-in-out;
+    transform: translate(100%);
+    backdrop-filter: blur(5px);
+  }
 
-    }
-  
-    .change .bar2 {
-      opacity: 0;
-    }
-  
-    .change .bar3 {
-      transform: rotate(-45deg) translate(8px, -3px);
-      background-color: white;
-    }
+  .nav-sub li {
+    height: 24px;
+    left: 0;
+    right: 98px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 44px;
+    display: flex;
+    flex-direction: start;
+    margin-left: -40%;
+    margin-top: 5.5%;
+    color: #fff;
+    z-index: 13;
+  }
 
-  
-    .list-item {
-      padding: 10px;
-      list-style: none;
-    }
-  
-    .nav-link {
-      color: inherit;
-      text-decoration: none;
-      
-    }
-    .nav-link.about{
-      margin-left:-10% ;
-    }
-    .nav-link.port{
-      margin-right: -20px;
-    }
-   
+  .nav-change {
+    transform: translate(0%);
+  }
+
+  .change .bar1 {
+    transform: rotate(45deg) translate(8px, 3px);
+    background-color: white;
+  }
+
+  .change .bar2 {
+    opacity: 0;
+  }
+
+  .change .bar3 {
+    transform: rotate(-45deg) translate(8px, -3px);
+    background-color: white;
+  }
+
+
+  .list-item {
+    padding: 10px;
+    list-style: none;
+  }
+
+  .nav-link {
+    color: inherit;
+    text-decoration: none;
+  }
+  .nav-link.about{
+    margin-left: -40px;
+  }
+
+
 
   section {
     display: block;
     margin: 0 auto;
     max-width: 375px;
-  
   }
 
   .background {
