--- a/css/mobile.css
+++ b/css/mobile.css
@@ -124,12 +124,8 @@
     font-weight: 500;
     padding: 10px;
     align-items: center;
-    font-style: bold;
   }
 
-  /* .nav-sub{
-    display:none;
-  } */
   .hamburgur {
     padding: 10px;
     cursor: pointer;
@@ -155,7 +151,6 @@
     margin-top: -20px;
     display: flex;
     overflow-x: hidden;
-    flex-direction: start;
     top: 1vh;
     right: 0;
     width: 450px;
@@ -171,7 +166,7 @@
   }
 
   .nav-sub li {
-    height: 24px;
+    height: 67px;
     left: 0;
     right: 98px;
     font-family: 'Poppins', sans-serif;
@@ -179,11 +174,10 @@
     font-size: 32px;
     line-height: 44px;
     display: flex;
-    flex-direction: start;
     margin-left: -40%;
     margin-top: 5.5%;
     color: #fff;
-    z-index: 13;
+    z-index: 30;
   }
 
   .nav-change {
@@ -204,7 +198,6 @@
     background-color: white;
   }
 
-
   .list-item {
     padding: 10px;
     list-style: none;
@@ -214,11 +207,11 @@
     color: inherit;
     text-decoration: none;
   }
-  .nav-link.about{
+
+  .nav-link.about {
     margin-left: -40px;
+    margin-top: -10px;
   }
-
-
 
   section {
     display: block;
@@ -335,10 +328,6 @@
     background: #fff;
     border: 1px solid #dfe1e6;
     border-radius: 16px;
-
-    /* flex: none;
-    order: 0;
-    flex-grow: 0; */
     margin: 10px;
     max-width: 327px;
   }
@@ -380,7 +369,6 @@
   .project-badges .text-1 {
     height: 16px;
     font-family: 'Poppins', sans-serif;
-    font-style: bold;
     font-weight: 600;
     font-size: 13px;
     text-transform: uppercase;
@@ -398,7 +386,6 @@
     color: #6b778c;
     height: 16px;
     font-family: 'Poppins', sans-serif;
-    font-style: bold;
     font-weight: 600;
     font-size: 13px;
     line-height: 16px;
@@ -409,7 +396,6 @@
     flex: 2;
     height: 16px;
     font-family: 'Poppins', sans-serif;
-    font-style: bold;
     font-weight: 600;
     font-size: 16px;
     line-height: 16px;
@@ -569,7 +555,6 @@
     font-weight: 500;
     padding: 10px;
     align-items: center;
-    font-style: bold;
   }
 
   .social-about {
@@ -664,7 +649,6 @@
     left: 41.67%;
     right: 33.33%;
     top: 25%;
-    bottom: 2;
   }
 
   .left-arrow2 {
@@ -673,7 +657,6 @@
     left: 41.67%;
     right: 33.33%;
     top: 25%;
-    bottom: 2;
   }
 
   .seperator-btn {
