--- a/assets/css/desktop-styling.css
+++ b/assets/css/desktop-styling.css
@@ -884,4 +884,97 @@ body {
   #image-form {
     display: none;
   }
+
+  
+  
+}
+
+/* Modal */
+
+/* .modal-bg{
+  position: fixed;
+  border: 1px solid blue;
+  top: 0;
+  width: 100%;
+  height: 100;
+  left: 0;
+  background-color: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  backdrop-filter: blur(5px);
+  transition: visibility 0s,opacity 0.5s;
+  background-color: white;
+} */
+
+.modal-bg {
+  background: #c1c7d0c9;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 7;
+  padding: 50px 0;
+  overflow: auto;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+}
+.bg-active{
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal{
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-around; 
+  align-items: center; 
+  flex-direction: column;
+}
+.modal button{
+  margin: 20px;
+  padding: 10px 30px;
+  background-color: #064169;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.close{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.title1{
+  font-size: 30px;
+  width: 1056px;
+  height: 40px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  color: #091E42;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin:0 ;
+}
+
+.badges1{
+  list-style: none;
+  display: flex;
+  /* flex-direction: row; */
+font-family: 'Poppins',sans-serif;
+font-weight: 500;
+font-size: 15px;
+color: #344563;
+flex: none;
+order: 0;
+flex-grow: 0;
+align-items: flex-start;
 }
