--- a/assets/css/desktop-styling.css
+++ b/assets/css/desktop-styling.css
@@ -886,10 +886,7 @@ body {
   }
 
   
-  
-}
-
-/* Modal */
+  /* Modal */
 
 /* .modal-bg{
   position: fixed;
@@ -920,6 +917,7 @@ body {
   top: 0;
   left: 0;
   visibility: hidden;
+  backdrop-filter: blur(5px);
 }
 .bg-active{
   visibility: visible;
@@ -928,17 +926,24 @@ body {
 
 .modal{
   border: 1px solid black;
+  border: 1px solid #EBECF0;
+  background-color: white;
   display: flex;
   justify-content: space-around; 
   align-items: center; 
   flex-direction: column;
+  max-width: 88%;
+  margin-left: 100px;
+  border-radius: 16px;
+  box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
+
 }
 .modal button{
   margin: 20px;
   padding: 10px 30px;
   background-color: #064169;
   color: white;
-  border: none;
+  display: flex;
   cursor: pointer;
 }
 .close{
@@ -965,16 +970,95 @@ body {
   margin:0 ;
 }
 
-.badges1{
-  list-style: none;
-  display: flex;
-  /* flex-direction: row; */
+.title1tonic{
+  width: 1056px;
+height: 40px;
 font-family: 'Poppins',sans-serif;
-font-weight: 500;
-font-size: 15px;
+font-style: normal;
+font-weight: 700;
+font-size: 40px;
+line-height: 52px;
+color: #091E42;
+order: 0;
+flex-grow: 0;
+margin-left: 60px;
+}
+
+.image1modal{
+width: 400px;
+height: 586px;
+left: 0px;
+top: 0px;
+border-radius: 8px;
+margin-left: -63%;
+}
+.description-text{
+  display: flex;
+
+}
+.text-para{
+  margin-left: -10%;
+}
+.modal-description{
+width: 778px;
+height: 382px;
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 30px;
 color: #344563;
 flex: none;
 order: 0;
 flex-grow: 0;
-align-items: flex-start;
+margin-left: 15%;
+margin-top: 4%;
+
 }
+
+.links-lang{
+  display: flex;
+  flex-direction: column;
+ 
+  margin-left: 10%;
+}
+.modalsIcon {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 300px;
+  height: 100px;
+  gap: 15px;
+  margin-top: 20px;
+}
+
+.modal-icons{
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+padding: 4px 12px;
+font-size: 15px;
+line-height: 16px;
+letter-spacing: 0.03em;
+color: #6070FF;
+display: flex;
+width: 89px;
+height: 24px;
+background: #EBEBFF;
+border-radius: 8px;
+order: 0;
+flex-grow: 0;
+}
+
+.links{
+  border: 1px solid black;
+  width: 150px;
+  height: 150px;
+  margin-top: 10%;
+
+}
+  
+}
+
