--- a/assets/css/desktop-styling.css
+++ b/assets/css/desktop-styling.css
@@ -938,20 +938,16 @@ body {
   box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
 
 }
-.modal button{
-  margin: 20px;
-  padding: 10px 30px;
-  background-color: #064169;
-  color: white;
-  display: flex;
-  cursor: pointer;
-}
 .close{
-  position: absolute;
+  /* position: absolute; */
   top: 10px;
   right: 10px;
   font-weight: bold;
   cursor: pointer;
+  font-size: 30px;
+  color: grey;
+  margin-right: -95%;
+
 }
 
 .title1{
@@ -972,18 +968,30 @@ body {
 
 .title1tonic{
   width: 1056px;
-height: 40px;
-font-family: 'Poppins',sans-serif;
-font-style: normal;
-font-weight: 700;
-font-size: 40px;
-line-height: 52px;
-color: #091E42;
-order: 0;
-flex-grow: 0;
-margin-left: 60px;
+  height: 40px;
+  font-family: 'Poppins',sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  color: #091E42;
+  order: 0;
+  flex-grow: 0;
+  margin-left: -4%;
+  margin-top: -40px;
 }
-
+.card1-badges{
+  list-style-type: none;
+  display: flex;
+  gap:10px;
+  margin-left: -72%;
+  padding: 40px;
+}
+.modal-counter{
+  width: 12px;
+  height: 10px;
+  margin-top: 10px;
+}
 .image1modal{
 width: 400px;
 height: 586px;
@@ -994,14 +1002,12 @@ margin-left: -63%;
 }
 .description-text{
   display: flex;
+  padding-left: 3%;
 
 }
-.text-para{
-  margin-left: -10%;
-}
+
 .modal-description{
-width: 778px;
-height: 382px;
+width: 90%;
 font-family: 'Poppins';
 font-style: normal;
 font-weight: 400;
@@ -1011,16 +1017,15 @@ color: #344563;
 flex: none;
 order: 0;
 flex-grow: 0;
-margin-left: 15%;
-margin-top: 4%;
+padding-top: 30px;
+
 
 }
 
 .links-lang{
   display: flex;
   flex-direction: column;
- 
-  margin-left: 10%;
+  padding-top: 13px;
 }
 .modalsIcon {
   list-style: none;
@@ -1035,8 +1040,7 @@ margin-top: 4%;
 }
 
 .modal-icons{
-  font-family: 'Poppins';
-font-style: normal;
+font-family: 'Poppins',sans-serif;
 font-weight: 500;
 padding: 4px 12px;
 font-size: 15px;
@@ -1051,13 +1055,23 @@ border-radius: 8px;
 order: 0;
 flex-grow: 0;
 }
-
-.links{
-  border: 1px solid black;
-  width: 150px;
-  height: 150px;
-  margin-top: 10%;
-
+.link-button{
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+  padding: 0 10px;
+}
+.livebutton{
+  font-family: 'Poppins',sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #6070FF;
+  gap: 20px;
 }
   
 }
