--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -773,4 +773,49 @@
   form {
     margin-top: 2%;
   }
+
+
+.modal-bg {
+  background: #c1c7d0c9;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 7;
+  padding: 50px 0;
+  overflow: auto;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  backdrop-filter: blur(5px);
+}
+.bg-active{
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal{
+  border: 1px solid black;
+  border: 1px solid #EBECF0;
+  background-color: white;
+  display: flex;
+  justify-content: space-around; 
+  align-items: center; 
+  flex-direction: column;
+  max-width: 88%;
+  margin-left: 100px;
+  border-radius: 16px;
+  box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
+
+}
+.close{
+  /* position: absolute; */
+  top: 10px;
+  right: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 30px;
+  color: grey;
+  margin-right: -95%;
+
+}
 }
