--- a/assets/css/desktop-styling.css
+++ b/assets/css/desktop-styling.css
@@ -539,8 +539,25 @@ body {
     flex: none;
     order: 1;
     flex-grow: 0;
+    transition: all 500ms linear;
+    cursor: pointer;
   }
 
+button:hover {
+  color: #fff;
+  background: #6070ff;
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
+}
+
+button:active {
+  background: #2230d2;
+  color: #fff;
+}
+
+button:disabled {
+  color: #5e6c84;
+  border: 1px solid #e5e5e5;
+}
   .social-about {
     padding: 20px 0;
     margin-left: 10px;
