--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -777,7 +777,7 @@
 
 .modal-bg {
   background: #c1c7d0c9;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   position: fixed;
   z-index: 7;
@@ -802,7 +802,7 @@
   align-items: center; 
   flex-direction: column;
   max-width: 88%;
-  margin-left: 100px;
+  margin-left: 20px;
   border-radius: 16px;
   box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
 
@@ -812,9 +812,127 @@
   right: 10px;
   font-weight: bold;
   cursor: pointer;
-  font-size: 30px;
+  font-size: 20px;
   color: grey;
-  margin-right: -95%;
-
+  margin-right: -85%;
 }
+
+.title1tonic{
+  /* width: 1056px; */
+  height: 40px;
+  font-family: 'Poppins',sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  color: #091E42;
+  order: 0;
+  flex-grow: 0;
+  padding: 10px;
+  margin-left: -60%;
+  margin-top: -40px;
+}
+.card1-badges{
+  list-style-type: none;
+  display: flex;
+  gap:6px;
+  margin-left: -50px;
+  padding: 30px;
+}
+
+.modal-counter{
+  width: 12px;
+  height: 10px;
+  margin-top: 10px;
+}
+
+.image1modal{
+  
+  left: 0px;
+  top: 0px;
+
+  }
+  .modal-bg1{
+   display: none;
+  }
+
+  .modal-description{
+    font-family: 'Poppins',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 30px;
+    color: #344563;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    padding: 30px;
+    }
+    .badges1{
+      list-style-type: none;
+    
+    }
+    .modalsIcon{
+      display: none;
+    }
+
+    .links-lang{
+      display: flex;
+      flex-direction: column;
+      margin-top: -20px;
+    }
+    
+    .mobileIcons {
+      list-style: none;
+      display: flex;
+      align-items: center;
+      margin-left: 20px;
+      gap: 15px;
+
+    }
+
+    .mobile-icons{
+      font-family: 'Poppins',sans-serif;
+      font-weight: 500;
+      padding: 4px 12px;
+      font-size: 10px;
+      line-height: 10px;
+      letter-spacing: 0.03em;
+      color: #6070FF;
+      display: flex;
+      height: 24px;
+      background: #EBEBFF;
+      border-radius: 8px;
+      order: 0;
+      flex-grow: 0;
+      }
+
+      .links{
+        height: 100px;
+      }
+
+      .link-button{
+        display: flex;
+        gap: 10px;
+        margin-top: 20px;
+        padding: 5px 20px;
+        
+      }
+      .livebutton{
+        font-family: 'Poppins',sans-serif;
+        border: 1px solid #DFE1E6;
+        border-radius: 16px;
+        font-weight: 500;
+        font-size: 10px;
+        width: 100px;
+        height: 30px;
+        padding: 10px;
+        line-height: 20px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        color: #6070FF;
+        gap: 20px;
+      }
+    
 }
